2010-09-21  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/gtk/widgets/scheme-boolean.jl: fixed loading widget-dialog,
	it's now in simple-dialog

	* debian/sawfish-data.install.in: remove monitor.png from here, too.

2010-09-19  Christopher Bratusek <zanghar@freenet.de>
	* lisp/sawfish/wm/ext/old-window-menu.jl: removed. it has been replaced
	by beos-window-menu in version 0.28.1

	* lisp/sawfish/wm/ext/3d-hack.jl: removed.

	* lisp/sawfish/cfg/Makefile.in
	* lisp/sawfish/gtk/Makefile.in
	* po/POTFILES.in
	* po/sawfish.pot: updated

	* lisp/sawfish/gtk/widgets/simple-dialog.jl: fix in it's define-structure

	* lisp/sawfish/cfg/utils.jl: added. contains `remove-newlines' and
	`beautify-symbol-name' functions.

	* lisp/sawfish/cfg/layout.jl
	* lisp/sawfish/cfg/widgets/command.jl
	* lisp/sawfish/cfg/widgets/keymap.jl
	* lisp/sawfish/cfg/widgets/match-window.jl: removed multiple definitons
	of `remove-newlines' and `beautify-symbol-name' functions. Modules now
	use sawfish.cfg.utils instead.

	* lisp/sawfish/gtk/widgets/list.jl: use the nicer gtk-stock-buttons rather
	than plain ones

	* lisp/sawfish/cfg/shell.jl: the shadow-type of the root-container was
	changed from out to etched-in. The command-line option --single-level
	was removed, as it was broken and somewhat useless. Early GNOME-ControlCenter
	did use capplets to start configuration. Capplets aren't in use for years
	anymore and have been removed from Sawfish 1.5.0. Now some remaining
	fragments from SawfishConfig are removed, too, with them the --socket-id
	command-line option. Set window-icon to "sawfish-config"

	* lisp/sawfish/cfg/sawfish-config.png: default window-icon for SawfishConfig
	If it doesn't show up, run `gtk-update-icon-cache /usr/share/icons/hicolor/'
	first and restart SawfishConfig, it will be displayed then.

	* lisp/sawfish/cfg/monitor.png: removed. was used by the capplets and those
	where removed a long time ago.

2010-09-18  Christopher Bratusek <zanghar@freenet.de>