@@ -1,6 +1,10 @@
 2010-09-21  Christopher Bratusek <zanghar@freenet.de>
 	* lisp/sawfish/gtk/widgets/scheme-boolean.jl: fixed loading widget-dialog,
-	it's now in simple-dialog
+	it's now in simple-dialog. Also change the behaviour a bit: Previously the
+	buttons label changed from "Yes" to "No" depending on state, now it's only
+	"Enable", this to improve window-matcher appearance (scheme-boolean is only
+	used in window-matcher and an revised version (with real fix) will come with
+	Sawfish 3.0.0).
 
 	* debian/sawfish-data.install.in: remove monitor.png from here, too.
 
